-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 16, 17
-
Component/s: hotspot
# Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/loopnode.cpp:1043), pid=3934292, tid=3934305
# assert(cmp != __null && cmp->Opcode() == Op_CmpL) failed: no exit test
Current CompileTask:
C2: 65318 7621 4 org.apache.lucene.search.BooleanQuery::rewrite (2110 bytes)
Stack: [0x00007f81400f9000,0x00007f81401fa000], sp=0x00007f81401f43d0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x12ba04d] PhaseIdealLoop::check_long_counted_loop(IdealLoopTree*, Node*)+0xad
V [libjvm.so+0x12d7db2] PhaseIdealLoop::transform_long_counted_loop(IdealLoopTree*, Node_List&)+0x62
V [libjvm.so+0x12d9915] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xcf5
V [libjvm.so+0xa1a76b] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x32b
V [libjvm.so+0xa17993] Compile::Optimize()+0x14c3
V [libjvm.so+0xa19710] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1840
V [libjvm.so+0x84914c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
V [libjvm.so+0xa29788] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe88
V [libjvm.so+0xa2a3d8] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x1853806] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x185a210] Thread::call_run()+0x100
V [libjvm.so+0x1540bd6] thread_native_entry(Thread*)+0x116
Came up with testing that Tobias ran forJDK-8259609 but is unrelated
# assert(cmp != __null && cmp->Opcode() == Op_CmpL) failed: no exit test
Current CompileTask:
C2: 65318 7621 4 org.apache.lucene.search.BooleanQuery::rewrite (2110 bytes)
Stack: [0x00007f81400f9000,0x00007f81401fa000], sp=0x00007f81401f43d0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x12ba04d] PhaseIdealLoop::check_long_counted_loop(IdealLoopTree*, Node*)+0xad
V [libjvm.so+0x12d7db2] PhaseIdealLoop::transform_long_counted_loop(IdealLoopTree*, Node_List&)+0x62
V [libjvm.so+0x12d9915] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xcf5
V [libjvm.so+0xa1a76b] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x32b
V [libjvm.so+0xa17993] Compile::Optimize()+0x14c3
V [libjvm.so+0xa19710] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1840
V [libjvm.so+0x84914c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
V [libjvm.so+0xa29788] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe88
V [libjvm.so+0xa2a3d8] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x1853806] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x185a210] Thread::call_run()+0x100
V [libjvm.so+0x1540bd6] thread_native_entry(Thread*)+0x116
Came up with testing that Tobias ran for
- relates to
-
JDK-8223051 support loops with long (64b) trip counts
-
- Resolved
-